--- a/images/chieu-nhua-thai-binh-12/config.ini
+++ b/images/chieu-nhua-thai-binh-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-12.html
 lastopen = 2024-06-10 00:20:10
 
 [search]
-lastsearch = 2024-07-29 19:37:40
+lastsearch = 2024-07-29 20:31:55
 
 [shopee.vn]
 match = -17.4%%
@@ -12,9 +12,9 @@ title = Chiếu nhựa thái bình gấp gọn (đủ mọi kích thươc)
 url = https://shopee.vn/Chiếu-nhựa-thái-bình-gấp-gọn-(đủ-mọi-kích-thươc)-i.266319381.9544957396
 
 [www.facebook.com]
-match = 52.2%%
-title = Chiếu Nhựa Thái Bình | Thanh Hóa
-url = https://www.facebook.com/chieunhuathaibinh/
+match = -43.5%%
+title = Chiếu Cói Thái Bình,Chiếu Nhựa,Chiếu Trúc cao cấp
+url = https://www.facebook.com/story.php/?story_fbid=1074677830771152&id=100046868362224
 
 [www.sendo.vn]
 match = 0.0%%
@@ -39,7 +39,7 @@ url = https://thaibinhtv.vn/news/0/61643/san-xuat-theo-chieu-huong-hien-dai-quy-
 [www.lazada.vn]
 match = -17.4%%
 title = chiếu nhựa gấp gọn Thái Bình tiện dụng 1.6 m x 2 m
-url = https://www.lazada.vn/products/chieu-nhua-gap-gon-thai-binh-tien-dung-16-m-x-2-m-i813788696.html?srsltid=AfmBOorud3hPL5nygft9H8X2SFJ5uJQ5pGjyUL82ZwTKnGhGl_CrZyhY
+url = https://www.lazada.vn/products/chieu-nhua-gap-gon-thai-binh-tien-dung-16-m-x-2-m-i813788696.html
 
 [chuyenhangviet.com]
 match = -73.9%%
@@ -64,7 +64,7 @@ url = https://demhong.vn/chieu-tre-viet-pho-men/
 [www.diepxuan.com]
 match = 26.1%%
 title = Chiếu nhựa Thái Bình 120x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-thai-binh-120x190.html?srsltid=AfmBOooii_oXQU8yFU5-kQx-HaJf4wiC17d6vDAnCkSdmwGLNyqxiMyW
+url = https://www.diepxuan.com/chieu-nhua-thai-binh-120x190.html
 
 [h5.lazada.vn]
 match = 34.8%%
@@ -72,9 +72,9 @@ title = chiếu nhựa thái bình gấp đôi 1.0x1.95
 url = https://h5.lazada.vn/products/freeship-max-ma-giam-gia-chieu-nhua-thai-binh-gap-doi-10x195-i1065314875.html
 
 [m.facebook.com]
-match = 85.0%%
-title = Chiếu nhựa Thái Bình
-url = https://m.facebook.com/100083672378137
+match = -43.5%%
+title = Chiếu Cói Thái Bình,Chiếu Nhựa,Chiếu Trúc cao cấp
+url = https://m.facebook.com/p/Chiếu-Cói-Thái-BìnhChiếu-NhựaChiếu-Trúc-cao-cấp-100046868362224/?locale=be_BY
 
 [chieu.com.vn]
 match = -117.4%%
