--- a/images/ga-ni-long-14/config.ini
+++ b/images/ga-ni-long-14/config.ini
@@ -327,9 +327,9 @@ title = Phase diagram of the binary Ga-Ni metal alloy system up to ...
 url = https://www.researchgate.net/figure/Phase-diagram-of-the-binary-Ga-Ni-metal-alloy-system-up-to-10-at-Ni-in-Ga-The-blue_fig1_356235073
 
 [www.deutschconnectorstore.com]
-match = -238.5%%
-title = 0460-204-12141 Size 12 Contact 14-12 Ga | Prowireusa
-url = https://www.deutschconnectorstore.com/p-75-deutsch-0460-204-12141-contact-14-12-ga.html
+match = -200.0%%
+title = Deutsch 0462-203-12141 Size 12 Contact 14-12 Ga
+url = https://www.deutschconnectorstore.com/p-85-deutsch-0462-203-12141-contact-14-12-ga.html
 
 [georgiadogs.com]
 match = -92.3%%
@@ -475,4 +475,9 @@ url = https://www.compassionatefriends.org/
 match = -261.5%%
 title = Map the Meal Gap: Hunger & Poverty in the United States
 url = https://map.feedingamerica.org/
+
+[www.ncbi.nlm.nih.gov]
+match = -276.9%%
+title = Current status of white coat hypertension: where are we?
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7318827/
 
