--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-07-29 17:51:40
+lastsearch = 2024-07-29 20:41:40
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -107,9 +107,9 @@ title = TUI Hotels & Resorts shares green recommendations to ...
 url = https://www.ttgasia.com/2023/06/16/tui-hotels-resorts-shares-green-recommendations-to-drive-sustainable-hospitality/
 
 [www.tui.co.uk]
-match = -258.3%%
-title = TUI.co.uk | Holidays, Flights & Cruises 2024 / 2025
-url = https://www.tui.co.uk/
+match = -41.7%%
+title = Find & Book Flights
+url = https://www.tui.co.uk/flight/
 
 [maritime-executive.com]
 match = -316.7%%
@@ -197,9 +197,9 @@ title = Camino Portugues Last 100km Relaxed: Tui to Santiago in ...
 url = https://www.thenaturaladventure.com/tours/spain/camino-portugues-last-100km-relaxed-tui-to-santiago-in-11-days/
 
 [www.youtube.com]
-match = -308.3%%
-title = Boeing 787 Dreamliner TUI (G -TUIH) Heavies Back to ALC!
-url = https://www.youtube.com/watch?v=rKX5XlLTbUo
+match = -141.7%%
+title = TUI 787 incident - 16th February 2023
+url = https://www.youtube.com/watch?v=VnQjWg2azZ0
 
 [www.americanairlines.co.uk]
 match = -350.0%%
