--- a/images/vo-chan-ks-uc-20-230/config.ini
+++ b/images/vo-chan-ks-uc-20-230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-230.html
 lastopen = 2024-06-10 00:43:14
 
 [search]
-lastsearch = 2024-07-29 16:26:01
+lastsearch = 2024-07-29 20:39:18
 
 [www.dir.ca.gov]
 match = -28.6%%
@@ -342,9 +342,9 @@ title = NTACT Evaluation Toolkit
 url = https://transitionta.org/wp-content/uploads/docs/toolkit_Evaluation.pdf
 
 [faculty.uci.edu]
-match = -115.0%%
-title = Nathan D. Wong - UC Irvine - Faculty Profile System
-url = https://faculty.uci.edu/profile/?facultyId=2414
+match = -140.0%%
+title = Nosratola D. Vaziri - UC Irvine - Faculty Profile System
+url = https://faculty.uci.edu/profile/?facultyId=2994
 
 [www.etecownersgroup.com]
 match = -115.0%%
