--- a/images/bo-ga-goi-chun-xoa-16/config.ini
+++ b/images/bo-ga-goi-chun-xoa-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-16.html
 lastopen = 2024-06-09 23:12:29
 
 [search]
-lastsearch = 2024-07-29 19:40:51
+lastsearch = 2024-07-29 21:18:54
 
 [hanvico.com.vn]
 match = 28.6%%
@@ -27,9 +27,9 @@ title = Bộ ga chun chần mặt Velina V16 - Forever Bedding
 url = https://foreverbedding.net/bo-ga-chun-chan-mat-velina-v16
 
 [changagoidemsonghong.com]
-match = -71.4%%
-title = Bộ chăn ga gối Sông Hồng Basic 100%% cotton BC22 057
-url = https://changagoidemsonghong.com/chan-ga-goi-bc57
+match = -19.0%%
+title = Chăn ga gối 100%% cotton mã mầu BC22-060
+url = https://changagoidemsonghong.com/chan-ga-goi-bc60
 
 [everonletrongtan.com]
 match = 19.0%%
@@ -52,9 +52,9 @@ title = Bộ chăn ga gối everon ES1816
 url = https://everon365.vn/bo-chan-ga-goi-everon-es-1816.html
 
 [shopee.vn]
-match = -52.4%%
-title = Set Ga Gối Cotton Đũi Bọc Chun Trần Bông Cao Cấp
-url = https://shopee.vn/Set-Ga-Gối-Cotton-Đũi-Bọc-Chun-Trần-Bông-Cao-Cấp-i.863643267.25425720943
+match = -47.6%%
+title = ga gối cotton xoa nhung đám cưới hồng mvdv16
+url = https://shopee.vn/search?keyword=ga gối cotton xoa nhung đám cưới hồng mvdv16
 
 [runa.vn]
 match = -4.8%%
