--- a/images/chieu-cay-cao-bang-a-12/config.ini
+++ b/images/chieu-cay-cao-bang-a-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-12.html
 lastopen = 2024-06-09 23:04:00
 
 [search]
-lastsearch = 2024-07-29 17:31:47
+lastsearch = 2024-07-29 21:13:39
 
 [chieutruc.info]
 match = -73.9%%
@@ -22,9 +22,9 @@ title = Chiếu trúc thanh cao bằng 1m4 loại 1 chất lượng
 url = https://chieutrucsaigon.com/chieu-truc-thanh-cao-bang-1m4x2m.html
 
 [shopee.vn]
-match = 17.4%%
-title = Chiếu cao bằng Việt Nam 1.2m x 1.95
-url = https://shopee.vn/Chiếu-cao-bằng-Việt-Nam-1.2m-x-1.95-i.79170238.1588526215
+match = -69.6%%
+title = Chiếu Trúc Cao Bằng-Tây Bắc-Chiếu Trúc Tăm chất lượng ...
+url = https://shopee.vn/Chiếu-Trúc-Cao-Bằng-Tây-Bắc-Chiếu-Trúc-Tăm-chất-lượng-cao-1-2x1-9m-i.158114102.5532697972
 
 [www.lazada.vn]
 match = 21.7%%
