--- a/images/chieu-nhua-thai-binh-08/config.ini
+++ b/images/chieu-nhua-thai-binh-08/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-08.html
 lastopen = 2024-06-09 23:16:13
 
 [search]
-lastsearch = 2024-07-29 18:48:40
+lastsearch = 2024-07-29 21:28:21
 
 [shopee.vn]
-match = -73.9%%
-title = Chiếu Cói Trắng Loại Dầy Kích Thước 0.8,1m2,1m4,1m5, ...
-url = https://shopee.vn/Chiếu-Cói-Thái-Bình-Chiếu-Cói-Trắng-Loại-Dầy-Kích-Thước-0.8-1m2-1m4-1m5-1m6-1m8-2mx2m2-i.126028938.9967765201
+match = -65.2%%
+title = Chiếu Nhựa Thái Bình, chiếu trải ăn cơm Gập Gọn đủ kích ...
+url = https://shopee.vn/Chiếu-Nhựa-Thái-Bình-chiếu-trải-ăn-cơm-Gập-Gọn-đủ-kích-thước-i.22156385.603951887
 
 [m.facebook.com]
-match = 8.7%%
-title = Xưởng chiếu nhựa Thái bình 2023 | Thai Binh
-url = https://m.facebook.com/CHIEUNHUAHATRANG/
+match = -13.0%%
+title = Xưởng sản xuất chiếu nhựa Thái Bình | Thai Binh
+url = https://m.facebook.com/61553157173242/
 
 [tiki.vn]
 match = -21.7%%
@@ -42,9 +42,9 @@ title = Xưởng sản xuất chiếu nhựa Dũng Tiến - Thái Bình
 url = https://www.facebook.com/p/Xưởng-sản-xuất-chiếu-nhựa-Dũng-Tiến-Thái-Bình-100076145417043/
 
 [www.yellowpages.vn]
-match = 60.9%%
-title = chiếu nhựa ở tại thái bình
-url = https://www.yellowpages.vn/class/490435/chiếu-nhựa-ở_thái-bình.html
+match = 15.8%%
+title = sản xuất chiếu nhựa
+url = https://www.yellowpages.vn/tgcls/40490435/sản-xuất-chiếu-nhựa.html?j=3
 
 [websosanh.vn]
 match = -73.9%%
