--- a/images/chieu-nhua-thai-binh-12/config.ini
+++ b/images/chieu-nhua-thai-binh-12/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-12.html
 lastopen = 2024-06-10 00:20:10
 
 [search]
-lastsearch = 2024-07-29 20:31:55
+lastsearch = 2024-07-29 21:14:22
 
 [shopee.vn]
-match = -17.4%%
-title = Chiếu nhựa thái bình gấp gọn (đủ mọi kích thươc)
-url = https://shopee.vn/Chiếu-nhựa-thái-bình-gấp-gọn-(đủ-mọi-kích-thươc)-i.266319381.9544957396
+match = -65.2%%
+title = Chiếu Nhựa Thái Bình, chiếu trải ăn cơm Gập Gọn đủ kích ...
+url = https://shopee.vn/Chiếu-Nhựa-Thái-Bình-chiếu-trải-ăn-cơm-Gập-Gọn-đủ-kích-thước-i.22156385.603951887
 
 [www.facebook.com]
-match = -43.5%%
-title = Chiếu Cói Thái Bình,Chiếu Nhựa,Chiếu Trúc cao cấp
-url = https://www.facebook.com/story.php/?story_fbid=1074677830771152&id=100046868362224
+match = 52.2%%
+title = Chiếu Nhựa Thái Bình | Thanh Hóa
+url = https://www.facebook.com/chieunhuathaibinh/
 
 [www.sendo.vn]
 match = 0.0%%
