--- a/images/ga-phu-uc-16/config.ini
+++ b/images/ga-phu-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-phu-uc-16.html
 lastopen = 2024-06-07 01:01:59
 
 [search]
-lastsearch = 2024-07-29 15:18:37
+lastsearch = 2024-07-29 21:12:36
 
 [us.misumi-ec.com]
 match = -325.0%%
@@ -22,14 +22,14 @@ title =
 url = https://www.uci.edu/
 
 [www.linkedin.com]
-match = -175.0%%
-title = Gino Angelici - Data Research Assistant
-url = https://www.linkedin.com/in/gino-angelici-19a594242
+match = -241.7%%
+title = Phu Ha - Lawrenceville, Georgia, United States
+url = https://www.linkedin.com/in/phu-ha-b87850148
 
 [www.gwhospital.com]
-match = 0.0%%
-title = 
-url = https://www.gwhospital.com/about
+match = -275.0%%
+title = Welcome to GW University Hospital | Washington, DC
+url = https://www.gwhospital.com/
 
 [finance.saccounty.gov]
 match = -150.0%%
