--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-29 19:40:05
+lastsearch = 2024-07-29 21:18:31
 
 [www.tiktok.com]
 match = -35.3%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -123.5%%
-title = The army list - Page 463 - Google Books Result
-url = https://books.google.com/books?id=YvANAAAAQAAJ&pg=RA1-PA463&lpg=RA1-PA463&dq=man+in+hoa+dep+16&source=bl&ots=KC69lqNVKJ&sig=ACfU3U1oci5-NyZ_788fSFgnOQaY4TtD5Q&hl=en&sa=X&ved=2ahUKEwicoIzJosyHAxXuM0QIHSG1GgsQ6AF6BAgeEAM
+match = -158.8%%
+title = The Monthly Army List - Page 23 - Google Books Result
+url = https://books.google.com/books?id=rEVEAQAAIAAJ&pg=RA68-PA23&lpg=RA68-PA23&dq=man+in+hoa+dep+16&source=bl&ots=kbdnhi64eR&sig=ACfU3U12AXinUJqK5it2qEPUW68p8BuRTw&hl=en&sa=X&ved=2ahUKEwiS8YzJuMyHAxW9EDQIHY-vGXQQ6AF6BAgbEAM
 
 [tax.vermont.gov]
 match = -29.4%%
