--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-29 14:58:10
+lastsearch = 2024-07-29 21:14:43
 
 [quizlet.com]
 match = -170.0%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/Ren_Gill
 [books.google.com]
 match = -430.0%%
 title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgkKMtr5&sig=ACfU3U2XGzxsoN8MBH6LdVy4_rU_zWsvWQ&hl=en&sa=X&ved=2ahUKEwj_zY3H48uHAxW5O0QIHR4iDlQQ6AF6BAgXEAM
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgkNFpq8&sig=ACfU3U30SxnARrCLeivX8ZAvm4TPfuYe3w&hl=en&sa=X&ved=2ahUKEwirhqTct8yHAxVfDDQIHXpNA3gQ6AF6BAgpEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
@@ -94,7 +94,7 @@ url = https://renaissancefest.com/
 [us.mbt.com]
 match = -220.0%%
 title = Men's Ren in White 702758-16L - MBT Shoes
-url = https://us.mbt.com/men-s-ren-white-702758-16l.html?srsltid=AfmBOooM5yEJnQVYudde7UQlXjXjB-fhsbFkbiCxxWS_AfXxrv5Z_zb3
+url = https://us.mbt.com/men-s-ren-white-702758-16l.html
 
 [hopkinssports.com]
 match = -100.0%%
