--- a/images/man-tu-bung-tre-em/config.ini
+++ b/images/man-tu-bung-tre-em/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-tre-em.html
 lastopen = 2024-06-07 00:52:30
 
 [search]
-lastsearch = 2024-07-29 16:33:19
+lastsearch = 2024-07-29 21:26:36
 
 [www.mantubung.com]
-match = -100.0%%
-title = Màn trẻ em tự bung chống muỗi đa năng 80cm * 100cm
-url = https://www.mantubung.com/man-tre-em-tu-bung-chong-muoi-da-nang-84845.html
+match = -105.6%%
+title = Mùng em bé chống muỗi đa năng cho trẻ em - Mùng Chụp
+url = https://www.mantubung.com/mung-em-be.html
 
 [manbinhminh.com]
 match = -144.4%%
@@ -17,9 +17,9 @@ title = Màn chống muỗi cho bé gấp gọn dễ dàng bao quản, mùng ...
 url = https://manbinhminh.com/2509/man-chong-muoi-cho-be-gap-gon-de-dang-bao-quan-mung-chup-tu-bung.aspx
 
 [shopee.vn]
-match = -33.3%%
-title = Màn Mùng chụp tự bung cho em bé sơ sinh
-url = https://shopee.vn/Màn-Mùng-chụp-tự-bung-cho-em-bé-sơ-sinh-Mùng-xếp-gấp-gọn-cho-bé-trẻ-em-bé-lớn-chống-muỗi-tuyệt-đối-i.236260085.7856510622
+match = -61.1%%
+title = màn tự bung giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=màn tự bung
 
 [h5.lazada.vn]
 match = -33.3%%
@@ -37,9 +37,9 @@ title = Màn chụp tự bung cho bé – Những quy tắc sử dụng an ...
 url = https://manthutrang.com/blogs/news/man-chup-tu-bung-cho-be-nhung-quy-tac-su-dung-an-toan-cha-me-can-biet
 
 [easydream.vn]
-match = -105.6%%
-title = Mùng Chụp Tự Bung -Màn chụp tự bung [16] - easy dream
-url = https://easydream.vn/mung-chup-tu-bung-man-chup-tu-bung-3-11.html
+match = -61.1%%
+title = mùng chụp tự bung gấp gọn cao cấp easy dream
+url = https://easydream.vn/mung-chup-tu-bung-gap-gon-cao-cap-easy-dream-134-15.html
 
 [www.mungtubung.com]
 match = -116.7%%
