--- a/images/tam-trai-topper-everon/config.ini
+++ b/images/tam-trai-topper-everon/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-topper-everon.html
 lastopen = 2024-06-07 01:44:00
 
 [search]
-lastsearch = 2024-07-29 18:40:56
+lastsearch = 2024-07-29 21:27:59
 
 [www.everonvn.vn]
 match = -27.3%%
@@ -32,9 +32,9 @@ title = Bảng giá bán Tấm topper Everon AVIV
 url = https://everonvn.com.vn/everon/2215/topper-everon-aviv
 
 [everon.com]
-match = 47.1%%
-title = Tấm trải - Topper
-url = https://everon.com/danh-muc-san-pham/tam-trai-topper
+match = -113.6%%
+title = Bảng giá của 5 loại topper trải sàn đa năng, cao cấp nhất ...
+url = https://everon.com/tin-san-pham/topper-trai-san-n256.html
 
 [everonthaiha.com]
 match = 47.1%%
@@ -52,9 +52,9 @@ title = Tấm Trải Everon Giá Tốt T04/2024 | Mua tại Lazada.vn
 url = https://www.lazada.vn/tag/tam-trai-everon/
 
 [kbedding.vn]
-match = -54.5%%
-title = Tấm trải tiện ích Everon Lite (giao màu ngẫu nhiên)
-url = https://kbedding.vn/product/tam-trai-tien-ich-microfiber-everon-lite/
+match = -68.2%%
+title = Tấm Topper Xanh Lá Everon Lite ELM203-1 - K-Bedding
+url = https://kbedding.vn/product/tam-topper-xanh-la-everon-lite-elm203-1/
 
 [dailyeveron.vn]
 match = -45.5%%
