--- a/images/bo-ga-goi-chun-chan-happy-16/config.ini
+++ b/images/bo-ga-goi-chun-chan-happy-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-chan-happy-16.html
 lastopen = 2024-06-06 16:51:08
 
 [search]
-lastsearch = 2024-07-29 20:42:00
+lastsearch = 2024-07-29 21:36:00
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -22,9 +22,9 @@ title = bộ ga chun poly giá tốt Tháng 7, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=bộ ga chun poly
 
 [chandem.com.vn]
-match = 21.4%%
-title = Bộ chăn ga gối Litter Girl Ctt112
-url = https://chandem.com.vn/san-pham/bo-chan-ga-goi-ctt112/
+match = 17.9%%
+title = Bộ chăn ga gối Happy Wedding Solid 84
+url = https://chandem.com.vn/san-pham/bo-chan-ga-goi-solid-84/
 
 [demxanh.com]
 match = 0.0%%
@@ -62,9 +62,9 @@ title = Bộ chăn ga Everon SR-16
 url = https://everonvn.com.vn/everon/2248/bo-chan-ga-everon-sr-16
 
 [tiki.vn]
-match = 17.9%%
-title = Bộ chăn ga gối hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=bộ chăn ga gối
+match = -39.3%%
+title = Ga chun trần everon 2*2,2m hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=ga chun trần everon 2*2,2m
 
 [changagoidemsonghong.com]
 match = 0.0%%
