--- a/images/chieu-gap-dai-loan-14/config.ini
+++ b/images/chieu-gap-dai-loan-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-14.html
 lastopen = 2024-06-09 22:43:30
 
 [search]
-lastsearch = 2024-07-29 16:51:18
+lastsearch = 2024-07-29 21:41:59
 
 [www.diepxuan.com]
 match = 19.0%%
@@ -220,4 +220,9 @@ url = https://www.luavietours.com/du-lich/du-lich-nuoc-ngoai/chau-a/dai-loan/dai
 match = -28.6%%
 title = Dịch vụ làm Visa du lịch Đài Loan trọn gói
 url = https://24hvisa.com/chau-a/dai-loan/
+
+[visadulich.com.vn]
+match = -76.2%%
+title = Dịch Vụ Xin Visa Du Lịch Đài Loan | Lữ Hành Việt Nam
+url = https://visadulich.com.vn/lam-visa-dai-loan.html
 
