--- a/images/nem-sieu-nhe-9f-12/config.ini
+++ b/images/nem-sieu-nhe-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
 lastopen = 2024-06-10 01:22:00
 
 [search]
-lastsearch = 2024-07-29 20:21:07
+lastsearch = 2024-07-29 21:40:12
 
 [www.lazada.vn]
 match = -111.1%%
@@ -27,9 +27,9 @@ title = Bảng giá nệm cao su Kim Cương mới 2024
 url = https://thegioinem.com/bang-gia-nem-cao-su-kim-cuong.html
 
 [www.facebook.com]
-match = -88.9%%
-title = NEM Fashion - 💥 𝐍𝐄𝐖 𝐘𝐄𝐀𝐑 𝐒𝐀𝐋𝐄 𝟓𝟎%% 💥 𝐓𝐎𝐀̀𝐍 𝐁𝐎̣̂ ...
-url = https://www.facebook.com/nemfashion.official/posts/-𝐍𝐄𝐖-𝐘𝐄𝐀𝐑-𝐒𝐀𝐋𝐄-𝟓𝟎-𝐓𝐎𝐀̀𝐍-𝐁𝐎̣̂-𝐒𝐀̉𝐍-𝐏𝐇𝐀̂̉𝐌-𝐓𝐇𝐔-đ𝐎̂𝐍𝐆với-mong-muốn-mang-tới-một-năm/766864658809567/
+match = -155.6%%
+title = Món Ngon Người Việt Houston | Mai thứ sáu 07/12/24 có ...
+url = https://www.facebook.com/groups/monngonnvh/posts/mai-thứ-sáu-071224-có-bún-nem-nướng-9bánh-bột-chiên-5chè-sương-sa-bánh-lọt-5bánh/26396130619978251/
 
 [eva.vn]
 match = -150.0%%
