--- a/images/tui-singapore15/config.ini
+++ b/images/tui-singapore15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-singapore15.html
 lastopen = 2024-06-10 00:27:49
 
 [search]
-lastsearch = 2024-07-29 18:20:33
+lastsearch = 2024-07-29 21:31:11
 
 [www.tui.co.uk]
-match = -153.3%%
-title = Cruise Calendar 2024 / 2025 | Marella Cruises
-url = https://www.tui.co.uk/cruise/cruise-calendar/
+match = -20.0%%
+title = Inflight Entertainment
+url = https://www.tui.co.uk/info/inflight-entertainment
 
 [www.travelgossip.co.uk]
 match = 0.0%%
@@ -77,9 +77,9 @@ title = Marella Cruises in Asia, sailing from Singapore
 url = https://www.southamptoncruisecentre.com/latest-news/marella-cruises-to-asia-with-dreamliner-to-singapore/
 
 [www.tuigroup.com]
-match = -233.3%%
-title = World's leading tourism business TUI Group set to grow in ...
-url = https://www.tuigroup.com/en-en/media/press-releases/2015/20151125-worlds-leading-tourism-business-tui-group-set-to-grow-in-south-east-asia
+match = -213.3%%
+title = TUI Group – The one of the world's leading tourism groups
+url = https://www.tuigroup.com/en-en
 
 [www.seascanner.com]
 match = -140.0%%
@@ -212,9 +212,9 @@ title =
 url = https://www.singaporeair.com/en_UK/sg/travel-info/special-assistance/unaccompanied-minors/
 
 [www.travelweekly-asia.com]
-match = -100.0%%
-title = TUI Cruises Cruises & Sailing Schedules
-url = https://www.travelweekly-asia.com/Cruise/TUI-Cruises
+match = -113.3%%
+title = TUI Cruises Mein Schiff 5 Ship Information
+url = https://www.travelweekly-asia.com/Cruise/TUI-Cruises/Mein-Schiff-5
 
 [www.google.com]
 match = -73.3%%
