--- a/images/vo-goi-bears-45x65/config.ini
+++ b/images/vo-goi-bears-45x65/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/vo-goi-bears-45x65.html
 lastopen = 2024-07-01 17:35:59
 
 [search]
-lastsearch = 2024-07-29 18:50:28
+lastsearch = 2024-07-29 21:46:26
 
 [everonvn.com.vn]
-match = 0.0%%
-title = Vỏ Gối Everon Giảm Giá Es1366
-url = https://everonvn.com.vn/everon/588/vo-goi-everon-giam-gia-es1366
+match = -55.6%%
+title = Vỏ gối đầu Everon Hotgirl giảm giá 30%%
+url = https://everonvn.com.vn/everon/2093/vo-goi-everon-hotgirl?srsltid=AfmBOoqThYS7qQzxRpnxJZlEF-zP4ShDXUidJm6DspDFaaesgEjwh-NU
 
 [www.lazada.vn]
 match = -161.1%%
 title = Hoạt động♀Chất lượng cao Vỏ gối bông 45x65 etami, mềm mại ...
-url = https://www.lazada.vn/products/hoat-dongchat-luong-cao-vo-goi-bong-45x65-etami-mem-mai-va-min-mang-thiet-ke-i2641874444-s12892934652.html?from_gmc=1&fl_tag=1
+url = https://www.lazada.vn/products/hoat-dongchat-luong-cao-vo-goi-bong-45x65-etami-mem-mai-va-min-mang-thiet-ke-i2641874444-s12892934652.html?from_gmc=1&fl_tag=1&srsltid=AfmBOoqm5VHCuQYiIX_YXgIKKhbYngKhq6ZgvAuSfztwZKxx3twjjMie
 
 [www.reddit.com]
 match = -150.0%%
@@ -34,12 +34,12 @@ url = https://muathongminh.vn/xu-huong-vo-goi-dau-cotton-poly-45x65-ao-goi-nam-n
 [www.diepxuan.com]
 match = 5.6%%
 title = Vỏ gối kê xoa 45x65 - Điệp Xuân
-url = https://www.diepxuan.com/vo-goi-ke-xoa-45x65.html
+url = https://www.diepxuan.com/vo-goi-ke-xoa-45x65.html?srsltid=AfmBOopUrIDUC1QGbv-ecgS5rhikL6r5t1jNvdQusf_hdZFuoS9ZMWa7
 
 [www.everonqb.com]
-match = -105.6%%
-title = Vỏ gối ESB23022 45x65 - Everon Quảng Bình Trang Chủ
-url = https://www.everonqb.com/vo-goi-esb23022-45x65.html
+match = -111.1%%
+title = Vỏ gối ESM20013 45x65 - Everon Quảng Bình Trang Chủ
+url = https://www.everonqb.com/vo-goi-esm20013-45x65.html
 
 [shopee.vn]
 match = -127.8%%
